fix(module:alert): padding for overlapping close button
fix overlapping close button using float instead of padding

Update index.less

updated demo

--- a/components/alert/style/index.less
+++ b/components/alert/style/index.less
@@ -15,6 +15,7 @@
 
   &&-no-icon {
     padding: 8px 15px;
+    .clearfix;
   }
 
   &-icon {
@@ -63,11 +64,9 @@
 
   &-close-icon {
     font-size: @font-size-sm;
-    position: absolute;
-    right: 16px;
-    top: 8px;
-    line-height: 22px;
+    line-height: 21px;
     overflow: hidden;
+    float: right;
     cursor: pointer;
 
     .@{iconfont-css-prefix}-close {
@@ -82,6 +81,11 @@
   &-close-text {
     position: absolute;
     right: 16px;
+  }
+
+  &-message {
+    display: block;
+    padding-right: 16px;
   }
 
   &-with-description {
@@ -104,9 +108,6 @@
   }
 
   &-with-description &-close-icon {
-    position: absolute;
-    top: 16px;
-    right: 16px;
     cursor: pointer;
     font-size: @font-size-base;
   }
